# Energy-Analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: data_sources.yml  schema_contracts.yml
data/raw/snapshots/: ercot_load_2026-02-18T21-17-51.666469Z.csv  ercot_price_2026-02-18T21-29-01.012414Z.csv  ercot_queue_2026-02-18T21-29-01.015808Z.csv
data/samples/: ercot_weather_sample.csv
docs/: architecture.md  assumptions.md  data_dictionary.md  method_finance.md  method_load.md  method_markets.md  method_queue.md
energy_analytics/: __init__.py  __main__.py  charts.py  config.py  contracts.py  dashboard.py  finance.py  forecast.py  ingest.py  markets.py  metadata.py  provenance.py  qa.py  queue.py  sources.py  transform.py
reports/: ingestion_manifest.json  market_findings.md  qa_report.md
tests/: test_contracts.py  test_dashboard.py  test_forecast.py  test_ingest.py  test_markets_finance.py  test_queue.py  test_queue_calibration.py  test_sources.py  test_transform.py
