[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-analytics"
version = "0.1.0"
description = "Milestone 1 pipeline for regional energy load/price/weather analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[tool.setuptools]
packages = ["energy_analytics"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
